# study-organizer

./: .env.example  .gitignore  PROJECT.md  README.md  ROADMAP.md  STRIPE_SETUP.md  Semetra_Academic_Integration_Plan.docx  Semetra_Ausbau_Masterplan_2026.docx  Semetra_Master_Status.docx  Semetra_Masterplan_100.docx  Semetra_Masterplan_Status_2026.docx  Semetra_Roadmap_2026.html  Task Board.md  build.bat  ci.yml  installer.iss  pyproject.toml  rename-to-semetra.bat  start.sh  study.db.bak  version_info.txt
.claude/: memory.md
.github/workflows/: ci.yml  release.yml
Daily Notes/: 041726.md
src/semetra/: __main__.py  app.py  fh_database.json  gui.py  gui_old.py.bak
src/study_organizer/: __main__.py  app.py  gui.py
src/study_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
supabase/migrations/: 006_flashcards.sql  007_task_attachments.sql  008_flashcard_task_mc.sql  009_ai_usage.sql
tests/: conftest.py  test_repo_sqlite.py  test_validation.py
tools/: apply_full_replace.sh  generate_soapp_code.py
website/: agb.html  auth.js  changelog.html  datenschutz.html  features.html  impressum.html  index.html  index.html.bak  latest_version.json  login.html  pricing.html  profil.html  register.html  styles.css  ueber-mich.html  warum-semetra.html
website/Alt/: agb.html  auth.js  changelog.html  datenschutz.html  features.html  i18n.js  impressum.html  index.html  index.html.bak  login.html  pricing.html  profil.html  register.html  styles.css  tech.html  ueber-mich.html  warum-semetra.html
website/instagram/: POSTING-PLAN.txt
(+83 files in other folders)
